tests/paczka1/small_fuzzy/65606272.err
Error in line 2: ojAI S410 61,1
Error in line 4: iYbhLBfUeh A283 49,2
Error in line 9: iDs?t S630 36,1
Error in line 5: iDsEt S630 13,9
